// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GifGrid /> should match Snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Man of Steel
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`<GifGrid /> should show items when useFetchGifs responds 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Man of Steel
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
